--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -8,16 +8,14 @@
     <meta name="description" content="Portfolio website created with React" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <meta http-equiv="Content-Security-Policy" content="default-src 'self' https: data: 'unsafe-inline' 'unsafe-eval'; frame-src 'self' https:; img-src 'self' https: data: blob:;">
     <link 
       rel="stylesheet" 
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" 
-      integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" 
       crossorigin="anonymous" 
       referrerpolicy="no-referrer" 
     />
     <title>Portfolio</title>
-    <link rel="preload" href="/sounds/keypress.mp3" as="audio" type="audio/mpeg">
-    <link rel="icon" type="image/x-icon" href="/favicon.ico">
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
